syntax = "proto3";

package protos;
option go_package = "github.com/empirefox/hybrid/pkg/authstore";

message AuthKey {
  uint64 id = 1;
  bytes key = 2;

  repeated string tags = 3;

  string desc = 4;

  int64 created_at = 5;
  int64 expires_at = 6;
}